tests/ui/attr-invariant/no-struct-error/expected
error: Cannot define invariant for `MyEnum`
  --> no-struct-error.rs:9:1
   |
9  | #[kani::invariant(true)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `#[kani::invariant(..)]` is only available for structs
